 cnp-stig-postgresql-port-external-access-8e6jf42.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-stig-postgresql-port-external-access-9flduwx
  namespace: kube-system
spec:
  description: "This will Block PostgreSQL External Access"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 6c4b5bcf94
      kubearmor-app: kubearmor
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16    #change with your ip address
      toPorts:
        - ports:
            - port: "5432"
